# allocator

./: .gitignore  CMakeLists.txt  vcpkg.json
allocator/: CMakeLists.txt  allocator.hpp  memory_pool.hpp  pool_concept.hpp  pool_reporter.hpp
tests/: CMakeLists.txt  main.cpp  pool_tests.cpp
